--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
+html, body { margin: 0; padding: 0; overflow: hidden; width: 100vw; height: 100vh; }
+#cesiumContainer { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; }
 #uiLabel {
     position: fixed;
     top: 10px;
